--- a/gb/19/5/16/n11262814.md
+++ b/gb/19/5/16/n11262814.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jbnpp2467/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>家庭作业并非多多益善</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/Fotolia_20199276_Subscription_L-600x400.jpg" />
 <h6>那些乏味机械、无助培养孩子学习能力，但需花费大量时间的家庭作业，会令孩子失去学习的兴趣，并开始害怕上学。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2019年05月16日讯】（大纪元记者伊琏澳洲悉尼编译报导）卡利什（Nancy Kalish）是一名资深儿童杂志编辑，也是一位颇受欢迎的育儿作家。班尼特（Sara Bennett）是一名成功的辩护律师。尽管职业不同，但她们都身为人母，都生活在纽约布鲁克林，并且都曾有过相同的经历：繁重的<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E4%BD%9C%E4%B8%9A.md#1">家庭作业</a>占据了<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>晚上和周末的时间，导致原本精力充沛，开朗活泼的孩子失去了学习的兴趣，并开始害怕上学。</p>
-<p>为了让<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>重获学习的动力，也为了还原教育的本意，这两位母亲就<ahref="https://github.com/jbnpp2467/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E4%BD%9C%E4%B8%9A.md#1">家庭作业</a>的影响联手开展了广泛翔实的调查研究，其中包括对全美各地的多名教育工作者、家长和学生进行访谈，于2007年撰写并发表了报告《不要家庭作业案例：家庭作业是如何伤害孩子的，以及父母能做些什么》（The Case Against Homework: How Homework Is Hurting Children and What Parents Can Do About It）。报告中也分享了她们通过建设性方法，成功改变孩子所在学校实践的经验。这本书在全美家长中引起共鸣，并获得如潮好评。</p>
+<p>【大纪元2019年05月16日讯】（大纪元记者伊琏澳洲悉尼编译报导）卡利什（Nancy Kalish）是一名资深儿童杂志编辑，也是一位颇受欢迎的育儿作家。班尼特（Sara Bennett）是一名成功的辩护律师。尽管职业不同，但她们都身为人母，都生活在纽约布鲁克林，并且都曾有过相同的经历：繁重的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E4%BD%9C%E4%B8%9A.md#1">家庭作业</a>占据了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>晚上和周末的时间，导致原本精力充沛，开朗活泼的孩子失去了学习的兴趣，并开始害怕上学。</p>
+<p>为了让<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A9%E5%AD%90.md#1">孩子</a>重获学习的动力，也为了还原教育的本意，这两位母亲就<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD%E4%BD%9C%E4%B8%9A.md#1">家庭作业</a>的影响联手开展了广泛翔实的调查研究，其中包括对全美各地的多名教育工作者、家长和学生进行访谈，于2007年撰写并发表了报告《不要家庭作业案例：家庭作业是如何伤害孩子的，以及父母能做些什么》（The Case Against Homework: How Homework Is Hurting Children and What Parents Can Do About It）。报告中也分享了她们通过建设性方法，成功改变孩子所在学校实践的经验。这本书在全美家长中引起共鸣，并获得如潮好评。</p>
 <p>需澄清的是，报告反对的不是家庭作业，而是乏味机械，无助培养孩子学习能力，但需花费大量时间的作业，如占据阅读时间机械性地背诵单词等。卡利什在接受美国育儿网站Parenting.com采访时，分享了报告的要点。</p>
 <h2>一、繁重的家庭作业是如何对孩子造成负面影响的？</h2>
 <p>孩子再没时间做回自己——他们被繁重的家庭作业包围。由于许多作业只是占据时间的机械性任务，学习往往成了一件苦差事，而非是积极的、有建设性的学习体验。繁重的家庭作业也影响了家庭生活——许多孩子甚至吃晚饭了还做不完功课，因此，他们与父母唯一的互动就变成了围绕家庭作业的 “争端”。</p>
@@ -22,48 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/23/n10419837.md#1">家长和老师如何帮助孩子学习数学</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/7/2/n10531737.md#1">颜丹：没有暑假作业就会丧失竞争力？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/11/20/n10863769.md#1">家长助孩子完成家庭作业十贴士</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/11/20/n10863805.md#1">聪明家长的选择：气质育儿法</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/2/n10886768.md#1">如何发现孩子在学校遇到的问题</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/18/n10985075.md#1">做到十件事 顺利辅导孩子写作业</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/2/27/n11075320.md#1">大陆学生写作业靠机器人 应试教育再遭诟病</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/3/20/n11126809.md#1">十大要诀帮助孩子在高中获得成功</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/3/30/n11150923.md#1">英国课外辅导 这里有您需要知道的事</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949461.md#1">孩子迷上YouTube 父母当如何应对</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/23/n10419837.md#1">家长和老师如何帮助孩子学习数学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/7/2/n10531737.md#1">颜丹：没有暑假作业就会丧失竞争力？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/20/n10863769.md#1">家长助孩子完成家庭作业十贴士</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/20/n10863805.md#1">聪明家长的选择：气质育儿法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/2/n10886768.md#1">如何发现孩子在学校遇到的问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/18/n10985075.md#1">做到十件事 顺利辅导孩子写作业</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/27/n11075320.md#1">大陆学生写作业靠机器人 应试教育再遭诟病</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/20/n11126809.md#1">十大要诀帮助孩子在高中获得成功</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/30/n11150923.md#1">英国课外辅导 这里有您需要知道的事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/25/n10590053.md#1" target="_blank">烧杀抢如何成为中共土地革命的“初心”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/19/n11952797.md#1">【现场视频】风吹保护套卷轿车 几百户面临火灾</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11951281.md#1">【拍案惊奇】中国七个雷区 随时踩爆更大疫情</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949692.md#1">【直播回放】3.18新肺炎追踪：实乃中共病毒</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/14/n11940160.md#1">狗狗思念过世主人暴瘦 破例让它见最后一面</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/15/n11942884.md#1">80%疾病都和脊椎有关？1动作揪出脊椎问题</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/16/n11262814.htm">家庭作业并非多多益善</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/5/16/n11262814.htm">家庭作业并非多多益善</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jbnpp2467/djy/blob/master/gb/19/5/16/n11262814.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/5/16/n11262814.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
